--- a/nugets/Xamarin.AndroidX.Migration.nuspec
+++ b/nugets/Xamarin.AndroidX.Migration.nuspec
@@ -5,7 +5,7 @@
     <!-- package -->
     <id>Xamarin.AndroidX.Migration</id>
     <title>Migration Tools for Xamarin AndroidX</title>
-    <version>1.0.0</version>
+    <version>1.0.2-nopdb</version>
     <description>
 This package provides a set of tools and MSBuild tasks to aid in the migration from Android Support to Android X.
     </description>
